ozone: evdev: Partially revert "ozone: evdev: Fix some minor issues and nits"

Since 493bad20a4c7 [formerly 8a14e9091d96] we dispatch device change notifications when palm suppression
state changes. This is causing context menus to be dismissed erroneously on stylus
lift. It's unclear why this is happening and should be fixed, but for now just
revert to the old behavior.

This is a partial revert of 493bad20a4c7 [formerly 8a14e9091d96].

Bug: 810599

Change-Id: Ida6b01f225e35cc7e04b603055a69a25c3f0163d
Reviewed-on: https://chromium-review.googlesource.com/923214
Commit-Queue: Michael Spang <spang@chromium.org>
Reviewed-by: Michael Spang <spang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#537452}
Former-commit-id: f30697974420401bfe6a9205b11b93039f838a36